components/notebook-controller/hack/example_tcp8000_authorization_policy.yaml
# Example AuthorizationPolicy generated by the notebook controller
# This policy allows TCP port 8000 access from any pod in the cluster
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: notebook-kubeflow-user-example-com-notebook-tcp8000-sample-tcp-8000
  namespace: kubeflow-user-example-com
  ownerReferences:
    - apiVersion: kubeflow.org/v1beta1
      kind: Notebook
      name: notebook-tcp8000-sample
      uid: "example-uid"
      controller: true
      blockOwnerDeletion: true
spec:
  action: ALLOW
  selector:
    matchLabels:
      statefulset: notebook-tcp8000-sample
  rules:
  - to:
    - operation:
        ports: ["8000"]
